# hapax-council

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  Dockerfile.sync-pipeline  LICENSE  MANIFEST.json  Makefile  README.md  SECURITY.md  conftest.py  docker-compose.yml  experiment-freeze-manifest.txt  experiment-phase.json  process-compose.yaml  promptfooconfig.yaml  pyproject.toml  pyrefly.toml  pyrightconfig.json  ruff.toml
gst-plugin-glfeedback/: Cargo.toml
gst-plugin-glfeedback/src/: lib.rs
gst-plugin-glfeedback/src/glfeedback/: imp.rs  mod.rs
hapax-cockpit/src-tauri/: Cargo.toml  tauri.conf.json
hapax-cockpit/src-tauri/capabilities/: default.json
hapax-cockpit/src-tauri/src/: main.rs
hapax-cockpit/src-tauri/src/commands/: agents.rs  governance.rs  mod.rs  state.rs  studio.rs
hapax-cockpit/src-tauri/src/visual/: bridge.rs  compositor.rs  mod.rs  output.rs  postprocess.rs  state.rs
hapax-cockpit/src-tauri/src/visual/shaders/: oklch.wgsl  physarum_agents.wgsl  physarum_trail.wgsl  postprocess.wgsl  reaction_diff.wgsl  voronoi_color.wgsl  voronoi_jfa.wgsl  wave.wgsl
hapax-cockpit/src-tauri/src/visual/techniques/: mod.rs  (+3 more)
hapax-logos/: Cargo.toml  README.md  eslint.config.js  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
hapax-logos/crates/hapax-visual/: Cargo.toml
hapax-logos/crates/hapax-visual/src/: content_layer.rs  content_sources.rs  content_textures.rs  dynamic_pipeline.rs  lib.rs  output.rs  transient_pool.rs  uniform_buffer.rs
hapax-logos/scripts/: dev.sh  install.sh
hapax-logos/src/: App.tsx  config.ts  index.css  main.tsx
hapax-logos/src-imagination/: Cargo.toml  build.rs
hapax-logos/src-imagination/src/: headless.rs  ipc.rs  main.rs
hapax-logos/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
hapax-logos/src-tauri/capabilities/: default.json
hapax-logos/src-tauri/src/: main.rs
hapax-logos/src-tauri/src/browser/: a11y.rs  commands.rs  engine.rs  mod.rs  services.rs
hapax-logos/src-tauri/src/commands/: agents.rs  cc_hygiene.rs  cost.rs  directive_watcher.rs  governance.rs  health.rs  introspect.rs  mod.rs  proxy.rs  relay.rs  state.rs  streaming.rs  studio.rs  system_flow.rs
hapax-logos/src-tauri/src/visual/: bridge.rs  client.rs  compositor.rs  content_layer.rs  control.rs  fx_relay.rs  gpu.rs  http_server.rs  mod.rs  output.rs  poc_overlay.rs  state.rs
hapax-logos/src/api/: client.ts  hooks.ts  stream.ts  types.ts
hapax-logos/src/api/__tests__/: client.test.ts  sse.test.ts  stream.test.ts
hapax-logos/src/components/: Header.tsx  MainPanel.tsx  Sidebar.tsx
hapax-logos/src/components/chat/: AssistantMessage.tsx  ChatInput.tsx  ChatProvider.tsx  METADATA.yaml  StatusBar.tsx  SystemMessage.tsx  UserMessage.tsx
hapax-logos/src/components/dashboard/: AgentConfigModal.tsx  AgentGrid.tsx  CopilotBanner.tsx  METADATA.yaml  NudgeList.tsx  OutputPane.tsx  SystemStatus.tsx
hapax-logos/src/components/demos/: DemoList.tsx  METADATA.yaml
hapax-logos/src/components/graph/: ChainBuilder.tsx  GraphToolbar.tsx  HapaxOverlay.tsx  NodeDetailSheet.tsx  PresetLibrary.tsx  SequenceBar.tsx  StudioCanvas.tsx  presetLoader.ts  presetMerger.ts
hapax-logos/src/components/hapax/: AmbientShader.tsx  METADATA.yaml
hapax-logos/src/components/insight/: METADATA.yaml  MermaidBlock.tsx  QueryInput.tsx  QueryResult.tsx  QueryResultList.tsx
hapax-logos/src/components/layout/: HapaxModal.tsx  Layout.tsx  METADATA.yaml  ManualDrawer.tsx
hapax-logos/src/components/perception/: ChannelStrip.tsx  DisplayStateBadge.tsx  METADATA.yaml  PerceptionCanvas.tsx  PerceptionMeter.tsx  PerceptionOverlayPortal.tsx  PerceptionSidebar.tsx  ZoneCard.tsx  ZoneOverlay.tsx
hapax-logos/src/components/shared/: CommandPalette.tsx  LoadingSkeleton.tsx  METADATA.yaml
hapax-logos/src/components/sidebar/: AccommodationPanel.tsx  BriefingPanel.tsx  CbipPanel.tsx  ConsentPanel.tsx  ContainersPanel.tsx  CostPanel.tsx  DriftPanel.tsx  EnginePanel.tsx  FreshnessPanel.tsx  GovernancePanel.tsx  HealthHistoryChart.tsx  HealthHistoryChartInner.tsx  HealthPanel.tsx  METADATA.yaml  ManagementPanel.tsx  OrientationPanel.tsx  OverheadPanel.tsx  PrecedentPanel.tsx  ProfilePanel.tsx  ScoutPanel.tsx  SidebarSection.tsx  SidebarStrip.tsx  TimersPanel.tsx  VramPanel.tsx  WorkstreamHygieneView.tsx
hapax-logos/src/components/studio/: CompositeCanvas.tsx  DetectionOverlay.tsx  METADATA.yaml  SceneBadges.tsx  StudioLiveGrid.tsx  StudioSidebar.tsx  StudioStatusGrid.tsx  StudioStream.tsx  VisualLayerPanel.tsx  compositeFilters.ts  compositePresets.ts  effectSources.ts
hapax-logos/src/components/terrain/: AgentOutputDrawer.tsx  CommandFeedback.tsx  CommandRegistryBridge.tsx  DetailPane.tsx  METADATA.yaml  Region.tsx  SplitPane.tsx  TerrainLayout.tsx
hapax-logos/src/components/visual/: LayerControls.tsx  METADATA.yaml  SurfacePreview.tsx  VisualSurface.tsx
hapax-logos/src/contexts/: AgentRunContext.tsx  ClassificationOverlayContext.tsx  CommandRegistryContext.tsx  GroundStudioContext.tsx  TerrainContext.tsx
hapax-logos/src/demo/: DemoRunner.tsx  useDemoBridge.ts
hapax-logos/src/demo/scripts/: aggie.ts  alexis-v4.ts  alexis.ts  brother.ts  index.ts  kids.ts
hapax-logos/src/hooks/: useBatchSnapshotPoll.ts  useHapaxIntrospection.ts  useHealthToasts.ts  useImagePool.ts  usePageVisible.ts  useSSE.ts  useSnapshotPoll.ts  useStudioShortcuts.ts  useSystemFlow.ts  useVisualLayer.ts
hapax-logos/src/lib/: awareness.ts  commandBridge.ts  commandRegistry.ts  keyboardAdapter.ts
hapax-logos/src/lib/__tests__/: awareness.test.tsx  keyboardAdapter.test.ts
hapax-logos/src/lib/commands/: sequences.ts  studio.ts  terrain.ts
hapax-logos/src/pages/: ChatPage.tsx  DashboardPage.tsx  FlowPage.tsx  HapaxPage.tsx  InsightPage.tsx  PerceptionPage.tsx  StudioPage.tsx  TerrainPage.tsx  VisualPage.tsx
hapax-logos/src/stores/: studioGraphStore.ts
hapax-logos/src/theme/: ThemeProvider.tsx  palettes.ts
plugins/gst-temporalfx/: Cargo.toml  build.rs
plugins/gst-temporalfx/src/: lib.rs  temporalfx.rs
(+5815 files in other folders)
