[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agents", "logos", "shared"]

[project]
name = "hapax-council"
version = "0.3.7"
description = "Personal agent infrastructure for a single-user LLM-first computing environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core: shared by all agents and containers
    "httpx>=0.28.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pydantic-ai[litellm]>=1.63.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.17.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "python-json-logger>=3.3.0",
    "openwakeword>=0.4.0",
    "litellm>=1.82.2",
    "kokoro>=0.9",
    "mistralai>=2.1.0",
    "python-toon>=0.1.3",
    "llmlingua>=0.2.2",
    "model2vec>=0.7.0",
    "uvloop>=0.21.0",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
logos-api = [
    "fastapi>=0.115.0",
    "jinja2>=3.1",
    "langfuse>=3.14.5",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.34.0",
    "watchdog>=6.0.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]
sync-pipeline = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "langfuse>=3.14.5",
]
audio = [
    "faster-whisper>=1.1.0",
    "mediapipe>=0.10.0",
    "opencv-python-headless>=4.10.0",
    "panns-inference>=0.1.1",
    "pipecat-ai[silero,openai]>=0.0.50",
    "pyannote-audio>=3.3.0",
    "pvporcupine>=4.0.0",
    "pyaudio>=0.2.14",
    "silero-vad>=5.1",
    "soundfile>=0.13.0",
    "torchaudio>=2.0.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "obsws-python>=1.7.0",
    "hsemotion-onnx>=0.3",
    # laion-clap: install separately — pins numpy<2.0.0 which conflicts with qdrant-client on 3.14
    #   uv pip install 'laion-clap>=1.1.6' --no-deps
    #   Then: uv pip install 'transformers' 'ftfy' --no-deps
    # beat_this: install separately — GPU model with version conflicts
    #   uv pip install 'beat_this' --no-deps
    # olaf: build from source (https://github.com/JorenSix/Olaf) — no pip package
    # openwakeword: install separately — tflite-runtime requires Python <=3.11
    # nemo_toolkit[asr]: install separately via `uv pip install 'nemo_toolkit[asr]' 'lightning==2.4.0' --force-reinstall --no-deps`
    #   - nemo_toolkit pins transformers<4.58 which caps huggingface-hub<1.0
    #   - pydantic-ai requires huggingface-hub>=1.3.4
    #   - These are irreconcilable until transformers 5.x drops the hf-hub cap
    #   - lightning must be pinned to 2.4.0 (nv-one-logger crashes with >=2.5)
    #   - After install, force pin: uv pip install 'lightning==2.4.0' --force-reinstall --no-deps
    #   - Use .venv/bin/python (not `uv run`) to avoid re-sync breaking the pin
]
ci = [
    # CI testing — everything except hardware-only audio deps
    "hapax-council[logos-api]",
    "hapax-council[sync-pipeline]",
    "google-genai>=1.0.0",
    "matplotlib>=3.9",
    "moviepy>=2.0.0",
    "pillow>=11.0.0",
    "playwright>=1.49.0",
    "watchdog>=6.0.0",
]
studio = [
    "ultralytics>=8.3.0",
]
host = [
    # Everything — for local development on the host machine
    "hapax-council[ci]",
    "hapax-council[audio]",
    "hapax-council[studio]",
]

[project.scripts]
logos = "logos.__main__:main"
logos-api = "logos.api.__main__:main"

[dependency-groups]
dev = [
    "hypothesis>=6.100.0",
    "pyright>=1.1.400",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "pytest-benchmark>=5.2.3",
    "schemathesis>=4.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not llm and not contract and not e2e'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "hardware: marks tests needing real hardware (deselect with '-m \"not hardware\"')",
    "llm: tests requiring live LLM access via LiteLLM (deselect with '-m \"not llm\"')",
    "research: tests for experiment/grounding research infrastructure (deselect with '-m \"not research\"')",
    "contract: boundary contract tests requiring full app + services (run with '-m contract')",
    "e2e: end-to-end tests requiring live services + browser (run with '-m e2e')",
]
