[package]
name = "hapax-cockpit"
version = "0.1.0"
description = "Hapax Cockpit — native desktop app for the Hapax agent system"
authors = ["hapax"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
