[package]
name = "hapax-imagination"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hapax-imagination"
path = "src/main.rs"

[dependencies]
hapax-visual = { path = "../crates/hapax-visual" }
winit = "0.30"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
wgpu = "24"
dirs = "6"

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build"] }
