[package]
name = "hapax-logos"
version = "0.1.0"
description = "Hapax Logos — native desktop app for the Hapax agent system"
authors = ["hapax"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Visual surface (hapax-visual)
wgpu = "24"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
notify = "7"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"

# Browser engine (agent-controlled web access)
chromiumoxide = "0.9"
futures = "0.3"
base64 = "0.22"
dirs = "6"

# Tier 2: Qdrant + Langfuse direct access
qdrant-client = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
urlencoding = "2"

# JPEG encoding for visual surface frames
turbojpeg = "1"

# HTTP frame server (visual surface)
axum = "0.8"

# Command relay (WebSocket server for external clients)
tokio-tungstenite = "0.26"
regex = "1"
