[package]
name = "gst-temporalfx"
version = "0.1.0"
edition = "2021"
description = "GStreamer GL temporal feedback filter with FBO ping-pong accumulation"

[lib]
name = "gsttemporalfx"
crate-type = ["cdylib"]

[dependencies]
glib = "0.20"
gstreamer = "0.23"
gstreamer-base = "0.23"
gstreamer-video = "0.23"
gstreamer-gl = "0.23"
once_cell = "1"

[build-dependencies]
gl_generator = "0.14"
