[package]
name = "hapax-visual"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "24"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
notify = "7"
pollster = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
turbojpeg = "1"
